# Hdl21

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  conftest.py  environment.yml  pyproject.toml  pytest.ini  readme.md  setup.py
.github/: install-dev.sh  install-pypi.sh
.github/workflows/: test.yaml
SampleSitePdks/: LICENSE  pyproject.toml  readme.md  setup.py  sitepdks.py
examples/: __init__.py  amp.py  bundles.py  diff_ota.py  encoder.py  idac.py  mos_iv_sim.py  mos_sim.py  pi.py  rdac.py  readme.md  ro.py  serdes.py  test_examples.py
hdl21/: __init__.py  attrmagic.py  bundle.py  call.py  concat.py  concatable.py  connect.py  datatype.py  default.py  dep_order.py  diff.py  diff_pair.py  elab.py  external_module.py  flatten.py  generator.py  generators.py  instance.py  instantiable.py  interface.py  literal.py  module.py  netlist.py  netlisting.py  noconn.py  one_or_more.py  params.py  portref.py  prefix.py  primitives.py  props.py  qualname.py  role.py  scalar.py  schematic_module.py  signal.py  slice.py  sliceable.py  slices.py  source_info.py  (+3 more)
hdl21/elab/: __init__.py  context.py  default.py  elab.py  elaboratable.py  elabpass.py
hdl21/elab/elaborators/: __init__.py  arrays.py  base.py  conntypes.py  diff_pairs.py  elaborators.py  flatten_bundles.py  generators.py  inst_bundles.py  mark_modules.py  orphanage.py  portrefs.py  resolve_ref_types.py  slices.py  width.py
hdl21/elab/helpers/: resolve_ref_types.py  width.py
hdl21/elab/passes/: __init__.py  arrays.py  base.py  conntypes.py  flatten_bundles.py  inst_bundles.py  mark_modules.py  orphanage.py  portrefs.py  slices.py
hdl21/netlist/: __init__.py  base.py  spectre.py  spice.py  verilog.py
hdl21/pdk/: __init__.py  corner.py  installation.py  pdk.py  test_pdk.py
hdl21/pdk/sample_pdk/: __init__.py  pdk.py  readme.md  sample_pdk.py  test_sample_pdk.py
hdl21/pdk/sample_pdk/resources/: models.sp
hdl21/proto/: __init__.py  circuit.proto  circuit_pb2.py  exporting.py  from_proto.py  importing.py  readme.md  to_proto.py
hdl21/schematic/: xschem_schematic.py
hdl21/sim/: __init__.py  data.py  delay.py  proto.py  to_proto.py
hdl21/sim/tests/: test_sim.py
hdl21/tests/: content.py  test_builtin_generators.py  test_bundles.py  test_conns.py  test_doc_examples.py  test_exports.py  test_flatten.py  test_hdl21.py  test_params.py  test_prefix.py  test_source_info.py  test_units.py
hdl21pdk/: __init__.py
hdl21pdk/asap7/: __init__.py  asap7.py
hdl21pdk/sky130/: __init__.py  sky130.py  test_sky130.py
hdl21sim/: __init__.py
hdl21sim/tests/: test_sim.py
pdks/: readme.md
pdks/Asap7/: pyproject.toml  readme.md  setup.py
pdks/Asap7/asap7/: __init__.py  asap7.py  pdk.py  test_asap7.py  test_pdk.py
pdks/Asap7/asap7_hdl21/: __init__.py  pdk.py  test_pdk.py
pdks/Gf180/: pyproject.toml  readme.md  setup.py
pdks/Gf180/gf180/: __init__.py  pdk.py  pdk_data.py  pdk_logic.py  sc_mcu7t5v0.py  sc_mcu9t5v0.py  test_netlists.py  test_pdk.py  test_site.py  test_site_sims.py
pdks/Gf180/gf180/digital/: __init__.py  sc_mcu7t5v0.py  sc_mcu9t5v0.py
pdks/Gf180/gf180/digital_cells/: __init__.py
pdks/Gf180/gf180/digital_cells/nine_track/: __init__.py  sc_mcu9t5v0.py
pdks/Gf180/gf180/digital_cells/seven_track/: __init__.py  sc_mcu7t5v0.py
pdks/Gf180/gf180/scripts/: parse_digital_cells.py
pdks/Gf180/gf180_hdl21/: pdk_data.py  pdk_logic.py  test_netlists.py  test_pdk.py  test_site_sims.py
pdks/Gf180/gf180_hdl21/digital_cells/: __init__.py  nine_track.py  seven_track.py
pdks/Gf180/gf180_hdl21/primitives/: prim_dicts.py  primitives.py
pdks/Gf180/gf180_hdl21/scripts/: parse_digital_cells.py
pdks/IHP/: LICENSE  pyproject.toml  readme.md
pdks/IHP/ihp_hdl21/: __init__.py  pdk_data.py  pdk_logic.py  test_pdk.py  test_site_sims.py
pdks/IHP/ihp_hdl21/digital_cells/: __init__.py  stdcells.py
pdks/IHP/ihp_hdl21/primitives/: __init__.py  prim_dicts.py  primitives.py
pdks/PdkTemplate/: cookiecutter.json  readme.md  setup.py
pdks/PdkTemplate/{{cookiecutter.pdk_name}}/: pdk.py
pdks/PdkTemplate/{{cookiecutter.repo_name}}/: .gitignore  pyproject.toml  readme.md  setup.py
pdks/PdkTemplate/{{cookiecutter.repo_name}}/{{cookiecutter.pdk_name}}/: __init__.py  pdk.py  test_pdk.py  test_site.py
pdks/SamplePdk/: pyproject.toml
pdks/SamplePdk/sample_pdk/: __init__.py  test_sample_pdk.py
pdks/Sky130/: LICENSE  export.py  pyproject.toml  readme.md  setup.py
pdks/Sky130/scripts/: export.py  parse_digital_cells.py
pdks/Sky130/sky130/: __init__.py  pdk.py  pdk_data.py  pdk_logic.py  primitives.py  sky130.py  test_netlists.py  test_pdk.py  test_site.py  test_site_autoinclude.py  test_site_sims.py  test_sky130.py
pdks/Sky130/sky130/digital/: __init__.py  sc_hd.py  sc_hdll.py  sc_hs.py  sc_hvl.py  sc_lp.py  sc_ls.py  sc_ms.py
pdks/Sky130/sky130/digital_cells/: __init__.py
pdks/Sky130/sky130/digital_cells/high_density/: __init__.py  sc_hd.py
pdks/Sky130/sky130/digital_cells/high_speed/: __init__.py  sc_hs.py
pdks/Sky130/sky130/digital_cells/high_voltage/: __init__.py  sc_hvl.py
pdks/Sky130/sky130/digital_cells/low_leakage/: __init__.py  sc_hdll.py
pdks/Sky130/sky130/digital_cells/low_power/: __init__.py  sc_lp.py
pdks/Sky130/sky130/digital_cells/low_speed/: __init__.py  sc_ls.py
pdks/Sky130/sky130/digital_cells/medium_speed/: __init__.py  sc_ms.py
pdks/Sky130/sky130/scripts/: parse_digital_cells.py
pdks/Sky130/sky130_hdl21/: pdk_data.py  pdk_logic.py  test_netlists.py  test_pdk.py  test_site_sims.py
pdks/Sky130/sky130_hdl21/digital_cells/: __init__.py  high_density.py  high_speed.py  low_leakage.py  low_power.py  low_speed.py  medium_speed.py
pdks/Sky130/sky130_hdl21/primitives/: prim_dicts.py  primitives.py
scratch/: amp.py  diff.py
scratch/examples/: pi.py  rdac.py  ro.py
scripts/: build.sh  install-dev.sh  install-pypi.sh  primtable.py
src/: lib.rs
