[tool.poetry]
name = "hdl21"
version = "0.1.0"
description = "Hardware Description Library"
authors = ["Dan Fritchman <dan@fritch.mn>"]
license = "BSD-3-Clause"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
protobuf = "^3.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

