[tool.poetry]
authors = ["Dan Fritchman <dan@fritch.mn>"]
description = "Hardware Description Library"
license = "BSD-3-Clause"
name = "hdl21"
readme = "readme.md"
version = "0.2.0"

[tool.poetry.dependencies]
pydantic = "1.8.2"
python = ">=3.8, <3.11"
vlsir = {path = "../Vlsir/packages/python"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
