[project]
name = "sitepdks"
description = "PDK Installations on THIS Machine"
version = "7.0.0" # VLSIR_VERSION
dependencies = [
  "hdl21>=7.0.0",        # VLSIR_VERSION
  "sky130-hdl21>=7.0.0", # VLSIR_VERSION
  "gf180-hdl21>=7.0.0",  # VLSIR_VERSION
  "asap7-hdl21>=7.0.0",  # VLSIR_VERSION
]
requires-python = ">=3.7, <3.13"
maintainers = [{ name = "Dan Fritchman", email = "dan@fritch.mn" }]
authors = [
  { name = "Dan Fritchman", email = "dan@fritch.mn" },
  { name = "Curtis Mayberry", email = "Curtisma3@gmail.com" },
]

readme = "readme.md"
license = { file = "LICENSE" }
keywords = ["HDL", "EDA", "analog", "circuit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.optional-dependencies]
dev = ["vlsirdev"]

[project.urls]
Homepage = "https://github.com/dan-fritchman/Hdl21"
Documentation = "https://github.com/dan-fritchman/Hdl21/blob/main/readme.md"
Repository = "https://github.com/dan-fritchman/Hdl21"
"Bug Tracker" = "https://github.com/dan-fritchman/Hdl21/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "sitepdks"

[tool.pytest.ini_options]
addopts = "--ignore=pdks/PdkTemplate"
