[tool.poetry]
name = "asap7_hdl21"
packages = [
    { include = "asap7" },
]
version = "0.2.0"
description = "ASAP7 Predictive/ Academic PDK Plug-In to Hdl21"
authors = ["Dan Fritchman <dan@fritch.mn>"]
license = "BSD-3-Clause"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.7"
hdl21 = "^0.2"
protobuf = "^3.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

