[project]
name = "asap7-hdl21"
version = "5.0.0"
description="ASAP7 PDK Package for Hdl21"
dependencies = [
    "hdl21 == 5.0.0",
]
requires-python = ">=3.7, <3.13"
maintainers = [
  {name = "Dan Fritchman", email = "dan@fritch.mn"},
]
authors = [
  {name = "Dan Fritchman", email = "dan@fritch.mn"},
  {name = "Thomas Pluck"},
  {name = "Curtis Mayberry", email = "Curtisma3@gmail.com"},
]

readme = "readme.md"
license = {file = "LICENSE"}
keywords = ["PDK", "EDA", "analog", "circuit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.optional-dependencies]
dev = [
    "pytest==7.1",
    "coverage",
    "pytest-cov",
    "pre-commit==2.20",
    "black==22.6",
    "twine",
    "flit",
]

[project.urls]
Homepage = "https://github.com/dan-fritchman/Hdl21"
Documentation = "https://github.com/dan-fritchman/Hdl21/blob/main/pdks/Asap7/readme.md"
Repository = "https://github.com/dan-fritchman/Hdl21"
"Bug Tracker" = "https://github.com/dan-fritchman/Hdl21/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "asap7_hdl21"

[tool.pytest.ini_options]
addopts = "--ignore=pdks/PdkTemplate"
